# rs-load-test

./: Cargo.toml  README.md
examples/: main.rs
src/: lib.rs  load.rs  report.rs
templates/: results.html
